# task_management_agents

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  langgraph.json  pyproject.toml  studio-config.json  test_agent.py  test_integration_flow.py
.claude/: .mcp.example.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_agent_improvement.yml  04_documentation.yml  05_performance.yml  06_question.yml  config.yml
.langgraph/: config.yaml  requirements.txt
deployment/: Dockerfile  docker-compose.yml  healthcheck.py
outputs/: requirement_specification_20250623_191011.md  サービス紹介ランディングページ作成プロジェクト_biz_requirement.md  ランディングページ作成プロジェクト_biz_requirement.md  ランディングページ作成プロジェクト_integrated_requirement.md  個人ポートフォリオサイト_biz_requirement.md  個人向けTODOアプリ開発プロジェクト_biz_requirement.md
scripts/: __init__.py  start_server.py
src/: __init__.py
src/agents/biz_requirement/: __init__.py  biz_requirement_agent.py  schemas.py
src/agents/core/: agent_builder.py  config_validator.py
src/agents/integrated_workflow/: __init__.py  integrated_workflow_agent.py
src/agents/requirement_process/: __init__.py  error_handler.py  main.py  review_manager.py  schemas.py
src/agents/requirement_process/orchestrator/: orchestrator_agent.py
src/agents/requirement_process/personas/: base_persona.py  data_architect.py  infrastructure_engineer.py  qa_engineer.py  security_specialist.py  solution_architect.py  system_analyst.py  ux_designer.py
src/common/: config.py
src/config/: __init__.py  langgraph_config.py
src/mcp_server/example/: __init__.py
src/task_manager/: __init__.py
src/utils/: logger.py
tests/: test_example.py
tests/agents/: test_entry_points.py
tests/agents/biz-requirement/: test_biz_requirement.py  test_biz_requirement_integration.py  test_end_to_end.py
tests/agents/integrated_workflow/: __init__.py  test_integrated_workflow_agent.py
tests/agents/requirement_process/: test_integration.py  test_orchestrator.py  test_persona_agents.py  test_v2_features.py
tests/config/: __init__.py  test_langgraph_config.py
tests/integration/: test_langgraph_cli.py  test_langgraph_server.py
